refactor: 抽共用類別、砍長註解，並把品質檢查做成這個 repo 的 hooks 與 skills
共用類別
- ApiExceptionHandler／ApiException／Params：控制器不再各自 try/catch 轉譯例外、手組 {"message"}、Enum.valueOf
- Rows：JDBC 可空欄位、時間戳、IN 佔位符；六個儲存庫的 wasNull／nCopies／getTimestamp().toInstant() 全部收掉
- web/components/forms.tsx：useSubmit、<Feedback>、<Gate>，Config 與 Tree 的表單共用；client.messageOf 外露
- 每個端點的 400／404／409 都重新打過一遍，狀態碼與訊息不變

註解
- 27 個超過八行的區塊砍到只留「為什麼」，推導與數字已在 ADR／performance.md

hooks 與 skills（.claude/）
- 規則在 lib/rules.js：分層違規、繞過共用做法、前端自行排序樹、密鑰、長註解；基準線只回報新問題
- post-edit-scan：編輯後即時回報；pre-commit-check：error 等級擋 commit；pre-push-gate：沒審查過不准 push
- skills：code-review（collect.js／mark.js）、quality-scan、arch-check、load-test；壓測工具搬進 benchmark/
- CLAUDE.md：分層、共用做法、三條契約、熱路徑、註解原則

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>